addet testing grid
testing more grid

--- a/testgrid.html
+++ b/testgrid.html
@@ -64,6 +64,56 @@
   <nav class="grid_2">2</nav>
   <nav class="grid_2">2</nav>
   <nav class="grid_2">2</nav>
+  <nav class="grid_3">3</nav>
+  <nav class="grid_3">3</nav>
+  <nav class="grid_3">3</nav>
+  <nav class="grid_3">3</nav>
+  <nav class="grid_3">3</nav>
+  <div class="grid_1">1</div>
+  <div class="clear"></div>
+  <nav class="grid_4">4</nav>
+  <nav class="grid_4">4</nav>
+  <nav class="grid_4">4</nav>
+  <nav class="grid_4">4</nav>
+  <div class="clear"></div>
+  <nav class="grid_5">5</nav>
+  <nav class="grid_5">5</nav>
+  <nav class="grid_5">5</nav>
+  <nav class="grid_1">1</nav>
+  <div class="clear"></div>
+  <nav class="grid_6">6</nav>
+  <nav class="grid_6">6</nav>
+  <nav class="grid_4">4</nav>
+  <div class="clear"></div>
+  <nav class="grid_7">7</nav>
+  <nav class="grid_7">7</nav>
+  <nav class="grid_4">2</nav>
+  <div class="clear"></div>
+  <nav class="grid_8">8</nav>
+  <nav class="grid_8">8</nav>
+  <div class="clear"></div>
+  <nav class="grid_9">9</nav>
+  <nav class="grid_7">7</nav>
+  <div class="clear"></div>
+  <nav class="grid_10">10</nav>
+  <nav class="grid_6">6</nav>
+  <div class="clear"></div>
+  <nav class="grid_11">11</nav>
+  <nav class="grid_5">5</nav>
+  <div class="clear"></div>
+  <nav class="grid_12">12</nav>
+  <nav class="grid_5">4</nav>
+  <div class="clear"></div>
+  <nav class="grid_13">13</nav>
+  <nav class="grid_3">3</nav>
+  <div class="clear"></div>
+  <nav class="grid_14">14</nav>
+  <nav class="grid_2">2</nav>
+  <div class="clear"></div>
+  <nav class="grid_15">15</nav>
+  <nav class="grid_1">1</nav>
+  
+
 
   
   
@@ -99,6 +149,7 @@
     <div class="grid_1 prefix_14"></div>
     <hr class="clear" />
     <div class="grid_1 prefix_15"></div>
+    
     <div class="grid_1 prefix_11 invicible_phone">ilang</div>
     <hr class="clear" />
   </section>
