--- a/testgrid.html
+++ b/testgrid.html
@@ -30,6 +30,33 @@
        Modernizr enables HTML5 elements & feature detects for optimal performance.
        Create your own custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/modernizr-2.5.3.min.js"></script>
+  <style>
+    .showgrid .grid_1,
+    .showgrid .grid_2,
+    .showgrid .grid_3,
+    .showgrid .grid_4,
+    .showgrid .grid_5,
+    .showgrid .grid_6,
+    .showgrid .grid_7,
+    .showgrid .grid_8,
+    .showgrid .grid_9,
+    .showgrid .grid_10,
+    .showgrid .grid_11,
+    .showgrid .grid_12,
+    .showgrid .grid_13,
+    .showgrid .grid_14,
+    .showgrid .grid_15,
+    .showgrid .grid_16{
+        background: #f2f2f2;
+        text-align: center;
+        margin-bottom: 10px;
+        min-height: 30px;
+    }
+    
+    .bg {
+        background: #333;
+    }
+  </style>
 </head>
 
 <body>    
