--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <!-- JavaScript at the bottom for fast page loading -->
   
   <!-- scripts concatenated and minified via build script -->
-  <script src="js/jquery-1.10.1.min.js"></script>
-  <script src="js/jquery-migrate-1.2.1.min.js"></script>
-  <script src="js/script.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 
 
 </body>
