--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- scripts concatenated and minified via build script -->
   <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="js/scriptmin.js"></script>
 
 
 </body>
