--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="js/modernizr-2.5.3.min.js"></script>
 </head>
 
-<body class="bg">    
+<body>    
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -45,7 +45,7 @@
   <!-- scripts concatenated and minified via build script -->
   <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="js/scriptmin.js"></script>
+  <script type="text/javascript" src="js/script.min.js"></script>
 
 
 </body>
