added 1140 and 1200 pixel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title></title>
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta name="author" content="SlashDiv TheFlavare">
+    <meta name="author" content="Finn Firrior Falkana">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
@@ -34,14 +34,14 @@
   <script src="js/modernizr-2.5.3.min.js"></script>
 </head>
 
-<body>    
+<body>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
 
   <!-- JavaScript at the bottom for fast page loading -->
-  
+
   <!-- scripts concatenated and minified via build script -->
   <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
